--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script>
+      self.addEventListener('fetch', function (event) {})
+    </script>
   </body>
 </html>
