--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('/service-worker.js')
+          .then(function (reg) {
+            console.log('Service worker registered.')
+          })
+          .catch(function (err) {
+            console.log('Service worker not registered. This happened:', err)
+          })
+      }
+    </script>
   </body>
 </html>
